# audioman-decomp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
demo/: CMakeLists.txt  filter.cpp
src/: CMakeLists.txt  audio.cpp  audio.h  audioman.cpp  audiomaninternal.h  cchannel.cpp  cchannel.h  cfakeout.cpp  cfakeout.h  cmixer.cpp  cmixer.h  cmixlib.cpp  cmixlib.h  cmixout.cpp  cmixout.h  convert.cpp  convert.h  cplaysnd.cpp  cplaysnd.h  crealout.cpp  crealout.h  debugmem.cpp  debugmem.h  dpf.cpp  dpf.h  factory.cpp  factory.h  mutex.cpp  mutex.h  riff.cpp  riff.h  riffstrm.cpp  riffstrm.h  sndbias.cpp  sndbias.h  sndcache.cpp  sndcache.h  sndclip.cpp  sndclip.h  sndcnvt.cpp  (+17 more)
